# deview

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json
.github/workflows/: ci.yml
src/: components.rs  config.rs  main.rs  review.rs  server.rs
src/components/: coming.rs  footer.rs  header.rs  nav_bar.rs  page_not_found.rs  wrapper.rs
src/review/: auth.rs
src/server/: state.rs  tables.rs
src/server/tables/: access_token.rs  account.rs
