[package]
name = "deview"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {version = "1.0.89", optional = true}
axum = { version = "0.7.5", optional = true }
config = { version = "0.14.0", features = ["toml"], default-features = false, optional = true }
dioxus = { version = "0.5.6", features = ["fullstack", "router"] }
dioxus-logger = "0.5"
dioxus-web = { version = "0.5.6", features = ["hydrate"], optional = true }
manganis = { version = "0.2.2", optional = true }
review-database = { git = "https://github.com/petabi/review-database.git", tag = "0.30.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.128" }
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1.16.1", default-features = false, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time"
], optional = true }

[features]
default = []
server = ["dioxus/axum", "tokio", "axum", "config", "anyhow", "review-database"]
web = ["dioxus-web", "manganis"]
